# bevy_sprite_animation

./: Cargo.toml  README.md
assets/: Zombie1_image_vec.nodetree
examples/: basic_code_animation.rs  basic_code_animation_image_vec.rs  basic_code_animation_sprite_sheet.rs  basic_load_animation.rs  basic_load_animation_image_vec.rs  zombie.rs
src/: attributes.rs  error.rs  lib.rs  node_core.rs  node_id.rs  serde.rs  state.rs
src/nodes/: fps_node.rs  index_node.rs  match_node.rs  mod.rs  scale_node.rs  script_node.rs  variable_node.rs
