[package]
name = "bevy_sprite_animation"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A Node Based Sprite Animatio Plugin, Bassed on Aarthificial's Reanimator"
readme = "README.md"
homepage = "https://github.com/PhaestusFox/bevy_sprite_animation"
repository = "https://github.com/PhaestusFox/bevy_sprite_animation"
exclude = ["assets/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11", features = ["serialize"] }
serde = { version = "1", optional = true }
ron = { version = "0.8.0", optional = true }
#bevy-inspector-egui = {version = ">=0.19", optional = true}
#bevy_editor_pls = {version = ">=0.4", git = "https://github.com/jakobhellermann/bevy_editor_pls.git", optional = true}
thiserror = "1"
uuid = "1.4"
strum_macros = "0.25"
opener = { version = ">=0.6", optional = true }

[features]
default = ["serialize", "dot", "image_vec"]
serialize = ["dep:ron", "dep:serde"]
dot = ["dep:opener"]
# editor = ["dep:bevy_editor_pls", "dep:bevy-inspector-egui"]
image_vec = []
sprite_sheet = []

[[bin]]
name = "from_code"
path = "examples/basic_code_animation.rs"

[[bin]]
name = "from_loaded"
path = "examples/basic_load_animation.rs"
